--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "postolka",
 	"version": "0.0.1",
 	"private": true,
+	"license": "CC0-1.0",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -15,25 +16,42 @@
 		"test:unit": "vitest"
 	},
 	"devDependencies": {
+		"@iconify/json": "^2.2.216",
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^8.56.7",
+		"@types/node": "^20.14.0",
+		"autoprefixer": "^10.4.19",
+		"daisyui": "^4.11.1",
+		"drizzle-kit": "^0.22.1",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.0.0",
+		"postcss": "^8.4.38",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
 		"svelte": "^5.0.0-next.1",
 		"svelte-check": "^3.6.0",
+		"sveltekit-superforms": "^2.14.0",
+		"tailwindcss": "^3.4.3",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0-alpha.20",
+		"unplugin-icons": "^0.19.0",
 		"vite": "^5.0.3",
-		"vitest": "^1.2.0"
+		"vitest": "^1.2.0",
+		"zod": "^3.23.8"
 	},
 	"type": "module",
-	"packageManager": "pnpm@9.1.1+sha512.14e915759c11f77eac07faba4d019c193ec8637229e62ec99eefb7cf3c3b75c64447882b7c485142451ee3a6b408059cdfb7b7fa0341b975f12d0f7629c71195"
+	"dependencies": {
+		"@neondatabase/serverless": "^0.9.3",
+		"dotenv": "^16.4.5",
+		"drizzle-orm": "^0.31.0",
+		"fast-jwt": "^4.0.1",
+		"formsnap": "^1.0.0"
+	},
+	"packageManager": "pnpm@9.1.4+sha512.9df9cf27c91715646c7d675d1c9c8e41f6fce88246f1318c1aa6a1ed1aeb3c4f032fcdf4ba63cc69c4fe6d634279176b5358727d8f2cc1e65b65f43ce2f8bfb0"
 }
