--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
 		"dotenv": "^16.4.5",
 		"drizzle-orm": "^0.31.0",
 		"fast-jwt": "^4.0.1",
-		"formsnap": "^1.0.0"
+		"formsnap": "^1.0.0",
+		"htmlparser2": "^9.1.0",
+		"yeet-ts": "^1.0.3"
 	},
 	"packageManager": "pnpm@9.1.4+sha512.9df9cf27c91715646c7d675d1c9c8e41f6fce88246f1318c1aa6a1ed1aeb3c4f032fcdf4ba63cc69c4fe6d634279176b5358727d8f2cc1e65b65f43ce2f8bfb0"
 }
